--- a/calculator.html
+++ b/calculator.html
@@ -29,8 +29,9 @@
           <div class="key">*</div>
           <div class="key">0</div>
           <div class="key">/</div>
-          <div class="key">=</div>
+          <div class="key">.</div>
           <div class="key">CE</div>
+          <div class="key">=</div>
         </div>
      </main>
 
