added previousAns Fucntion and did some bug fixes

--- a/calculator.html
+++ b/calculator.html
@@ -31,6 +31,7 @@
           <div class="key">/</div>
           <div class="key">.</div>
           <div class="key">CE</div>
+          <div class="key">pAns</div>
           <div class="key">=</div>
         </div>
      </main>
